--- a/css.html
+++ b/css.html
@@ -39,22 +39,27 @@
         </h1>
       </div>
     </div>
-    <br />
+    <br>
     <h1 class="ex1">Блог моего учения css)</h1>
     <div class="divide">
       <div class="text">
         <h1 class="content">11 марта 2023 года</h1>
-        <h1 class="text3">(В изучении языка много с чем мне помогла Алиса (AnimeDev), спасибо большое ей за всё ♥️)</h1>
+        <h1 class="text4">(В изучении языков много с чем мне помогла Алиса (AnimeDev), спасибо большое ей за всё ♥️)</h1>
         Я начинаю изучать css и js. Я уже научился ставить фон, изменять цвета,
         перемещать текст, вставлять ссылки и много другое. Сайт, где я изучаю
         css, вы можете найти, нажав на верхней панели <bold>"CSS"</bold>, сайт,
         где я изучаю js <bold>"JavaScript"</bold>. <br>
         Этот блог нужен для того, чтобы можно было посмотреть на то, как я
-        развивался по мере учения.<br>Сейчас я приступаю к изучению ссылок.
+        развивался по мере учения.<br>Сейчас я приступаю к изучению ссылок. <br>
+        <h1 class="text3"> Добавлено: <br> Я сделал настройку фона для сайта. Теперь у менять 4 разных фона.</h1>
+        <h1 class="content">12 марта 2023 года</h1>
+        Я создал свой домен. Теперь можно заходить на мой сайт с любого места. <br>
+        Домен: <a href="https://senpaal.me/" target="_blank">senpaal.me</a>
+        <h1 class="content">x марта 2023 года</h1> 
       </div>
       <div class="text2">
         <h1 class="content">Примеры</h1>
-        <br />
+        <br>
       </div>
     </div>
 
