add style for aboutme

--- a/css.html
+++ b/css.html
@@ -7,30 +7,25 @@
     <title>Мои великие css учения...</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" href="css/style.css" />
-    <script
-      src="https://kit.fontawesome.com/3dd0ab1e58.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/3dd0ab1e58.js" crossorigin="anonymous"></script>
     <script src="js/panelSettings.js" defer></script>
   </head>
   <body>
     <div class="panelContainer">
+      <div>
+        <a href="/" class="goback">
+          <i class="fa-solid fa-arrow-left"></i>
+        </a>
+      </div>
       <div class="panelContainerFirst">
         <h1 class="panelContentFirst">
           <i class="fa-brands fa-css3"></i> Training css styles!
         </h1>
       </div>
       <div class="panelContainerSecond">
-        <a href="https://learn.javascript.ru/" target="_blank" class="panelText"
-          >JavaScript</a
-        >
-        <a
-          href="https://schoolsw3.com/css/index.php"
-          target="_blank"
-          class="panelText"
-          >CSS</a
-        >
-        <a href="aboutme.html" target="_blank" class="panelText">About me</a>
+        <a href="https://learn.javascript.ru/" target="_blank" class="panelText"> JavaScript </a>
+        <a href="https://schoolsw3.com/css/index.php" target="_blank" class="panelText"> CSS </a>
+        <a href="aboutme.html" class="panelText"> About me </a>
         <!-- target="_blank" открывает ссылку в новой вкладке -->
       </div>
       <div class="panelContainerThird">
@@ -44,7 +39,7 @@
     <div class="divide">
       <div class="text">
         <h1 class="content">11 марта 2023 года</h1>
-        <h1 class="text4">(В изучении языков много с чем мне помогла Алиса (AnimeDev), спасибо большое ей за всё ♥️)</h1>
+        <h1 class="text4">(В изучении языков много с чем мне помогла <a href="https://alica.me" target="_blank">Алиса (AnimeDev)</a>, спасибо большое ей за всё ♥️)</h1>
         Я начинаю изучать css и js. Я уже научился ставить фон, изменять цвета,
         перемещать текст, вставлять ссылки и много другое. Сайт, где я изучаю
         css, вы можете найти, нажав на верхней панели <bold>"CSS"</bold>, сайт,
