--- a/index.html
+++ b/index.html
@@ -13,5 +13,29 @@
         <h1 class="title">CSS Development<h1>
         <a href="css.html">My page</a>
     </header>
+    <div class="main">
+        <h1>Привет! <img style="height: 36px; width: 36px;" src="https://em-content.zobj.net/source/noto-emoji-animations/344/waving-hand_1f44b.gif" /></h1>
+        <h2>Добро пожаловать в мой блог!</h2>
+        <hd></hd>
+        <h1>Что тут можно увидеть?</h1>
+        <div class="grid">
+            <div class="grid-item-1">
+                Мои учения
+            <p>Я читал учебник и делал упражнения, чтобы добиться такого</p></div>
+            <div class="grid-item-2">Мои развития
+                <p>Я обретал всё больше и больше знаний, учась на ошибках</p>
+            </div>
+            <div class="grid-item-3">Мои попытки
+                <p>Не всё было гладко, но я старался и не терял мотивацию</p>
+            </div>
+            <div class="grid-item-4">Мои успехи
+                <p>С помощью моих знаний и умений, я смог сделать этот сайт, и это не всё</p>
+            </div>
+        </div>
+        <hd></hd>
+        <h1>Что ещё?</h1>
+        <h2>У меня есть блог, в котором ты можешь увидеть мой прогресс и историю</h2>
+        <button onclick="window.location.href = 'css.html'">Блог</button>
+    </div>
 </body>
 </html>
