--- a/aboutme.html
+++ b/aboutme.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About my ass</title>
+    <link rel="stylesheet" href="css/aboutme.css">
+    <title>About me</title>
 </head>
 <body>
-    
+    <header>
+        <a href="/">Go home</a>
+        <h1 class="title">About me<h1>
+        <a href="css.html">My page</a>
+    </header>
 </body>
 </html>
