--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="/">Go home</a>
+        <a href="/">Home</a>
         <h1 class="title">About me<h1>
         <a href="css.html">My page</a>
     </header>
