--- a/css.html
+++ b/css.html
@@ -48,9 +48,13 @@
         развивался по мере учения.<br>Сейчас я приступаю к изучению ссылок. <br>
         <h1 class="text3"> Добавлено: <br> Я сделал настройку фона для сайта. Теперь у менять 4 разных фона.</h1>
         <h1 class="content">12 марта 2023 года</h1>
-        Я создал свой домен. Теперь можно заходить на мой сайт с любого места. <br>
+        Я исправил пару ошибок на сайте, теперь всё более или менее стабильно. 
+        Ещё я создал свой домен. Теперь можно заходить на мой сайт с любого места. <br>
         Домен: <a href="https://senpaal.me/" target="_blank">senpaal.me</a>
-        <h1 class="content">x марта 2023 года</h1> 
+        <h1 class="content">13 марта 2023 года</h1>
+        Я сделал оформление для начальной страницы: <a href="/">Home</a>. Также обновил страницу: <a href="aboutme.html">About me</a>.
+        Теперь там есть хоть что-то, а не просто белый фон, как раньше) Сейчас я занят доработкой оформления сайта, я сейчас не думаю об изучениии языков дальше.
+        Я думаю о том, как бы доделать оформление на всех трёх сайтах, чтобы спать спокойно.
       </div>
       <div class="text2">
         <h1 class="content">Примеры</h1>
