--- a/css.html
+++ b/css.html
@@ -37,11 +37,17 @@
     <div class="container">
       <div class="navigation">
         <h1 class="text5">Навигация по датам</h1>
+        <div> <!-- навигация по сайту -->
+          <a href="#11.03.2023"><br>-- 11 марта 2023 года --</a>
+          <a href="#12.03.2023"><br>-- 12 марта 2023 года --</a>
+          <a href="#13.03.2023"><br>-- 13 марта 2023 года --</a>
+        </div>
       </div>
       <div class="divide">
         <div class="text">
-          <h1 class="content">11 марта 2023 года</h1>
-          <h1 class="text4">(В изучении языков много с чем мне помогла <a href="https://alica.me" target="_blank">Алиса (AnimeDev)</a>, спасибо большое ей за всё ♥️)</h1>
+          <span class="content" id="11.03.2023">11 марта 2023 года</span>
+          <h1 class="text4">(В изучении языков много с чем мне помогла <a href="https://alica.me" target="_blank">Алиса
+              (AnimeDev)</a>, спасибо большое ей за всё ♥️)</h1>
           Я начинаю изучать css и js. Я уже научился ставить фон, изменять цвета,
           перемещать текст, вставлять ссылки и много другое. Сайт, где я изучаю
           css, вы можете найти, нажав на верхней панели <bold>"CSS"</bold>, сайт,
@@ -49,19 +55,26 @@
           Этот блог нужен для того, чтобы можно было посмотреть на то, как я
           развивался по мере учения.<br>Сейчас я приступаю к изучению ссылок. <br>
           <h1 class="text3"> Добавлено: <br> Я сделал настройку фона для сайта. Теперь у менять 4 разных фона.</h1>
-          <h1 class="content">12 марта 2023 года</h1>
-          Я исправил пару ошибок на сайте, теперь всё более или менее стабильно. 
+          <h1 class="content" id="12.03.2023">12 марта 2023 года</h1>
+          Я исправил пару ошибок на сайте, теперь всё более или менее стабильно.
           Ещё я создал свой домен. Теперь можно заходить на мой сайт с любого места. <br>
           Домен: <a href="https://senpaal.me/" target="_blank">senpaal.me</a>
-          <h1 class="content">13 марта 2023 года</h1>
-          Я сделал оформление для начальной страницы: <a href="/">Home</a>. Также обновил страницу: <a href="aboutme.html">About me</a>.
-          Теперь там есть хоть что-то, а не просто белый фон, как раньше) Сейчас я занят доработкой оформления сайта, я сейчас не думаю об изучениии языков дальше.
+          <h1 class="content" id="13.03.2023">13 марта 2023 года</h1>
+          Я сделал оформление для начальной страницы: <a href="/">Home</a>. Также обновил страницу: <a href="aboutme.html">About
+            me</a>.
+          Теперь там есть хоть что-то, а не просто белый фон, как раньше) Сейчас я занят доработкой оформления сайта, я сейчас не
+          думаю об изучениии языков дальше.
           Я думаю о том, как бы доделать оформление на всех трёх сайтах, чтобы спать спокойно.
-          <h1 class="text3">Добавлено: <br> Полностью изменил стелистику сайта. Добавил навигацию по сайту, и фон для панельки сверху. Добавил кнопку выхода на главный сайт.</h1>
-          <br>
+          <h1 class="text3">Добавлено: <br> Полностью изменил стилистику сайта. Добавил панель для навигации по сайту, и фон для панельки
+            сверху. Добавил кнопку выхода на главный сайт.</h1>
+          <h1 class="content" id="14.03.2023">14 марта 2023 года</h1>
+          Немного обновил вид сайта: убрал границы у контента и добавил скролл. Пофиксил некоторые баги, добавил всякий мелочей.
+          Начал делать навигацию по датам. У меня не получается, пока что забуду и сделаю позже)
         </div>
       </div>
     </div>
+
+    <div class="bg"></div>
 
     <!-- Панель с настройками -->
 
