update css.html and style.css

--- a/css.html
+++ b/css.html
@@ -45,7 +45,7 @@
       </div>
       <div class="divide">
         <div class="text">
-          <span class="content" id="11.03.2023">11 марта 2023 года</span>
+          <h1 class="content" id="11.03.2023">11 марта 2023 года</h1> <!-- Лучше использовать <span>Текст</> вместо <h1>Текст</> -->
           <h1 class="text4">(В изучении языков много с чем мне помогла <a href="https://alica.me" target="_blank">Алиса
               (AnimeDev)</a>, спасибо большое ей за всё ♥️)</h1>
           Я начинаю изучать css и js. Я уже научился ставить фон, изменять цвета,
