update css.html and aboutme.css

--- a/aboutme.html
+++ b/aboutme.html
@@ -13,5 +13,8 @@
         <h1 class="title">About me<h1>
         <a href="css.html">My page</a>
     </header>
+    <div>
+        <span class="text">Я люблю пенисы</span>
+    </div>
 </body>
 </html>
