update aboutme and add works.html

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-        <a href="/">Home</a>
-        <h1 class="title">About me<h1>
-        <a href="css.html">My page</a>
+        <h1 class="titleMe">About me<h1>
+        <a class="panelHome" href="/">Home</a>
+        <a class="panelWorks" href="works.html">My works</a>
     </header>
     <div>
         <span class="text">Я люблю пенисы</span>
