--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <a href="aboutme.html">About me</a>
         <h1 class="title">CSS Development<h1>
-        <a href="css.html">My page</a>
+        <a href="works.html">My works</a>
     </header>
     <div class="main">
         <h1>Привет! <img style="height: 36px; width: 36px;" src="https://em-content.zobj.net/source/noto-emoji-animations/344/waving-hand_1f44b.gif" /></h1>
