update works.html add works.css

--- a/css.html
+++ b/css.html
@@ -25,7 +25,7 @@
       <div class="panelContainerSecond">
         <a href="https://learn.javascript.ru/" target="_blank" class="panelText"> JavaScript </a>
         <a href="https://schoolsw3.com/css/index.php" target="_blank" class="panelText"> CSS </a>
-        <a href="aboutme.html" class="panelText"> About me </a>
+        <!-- <a href="aboutme.html" class="panelText"> About me </a> -->
         <!-- target="_blank" открывает ссылку в новой вкладке -->
       </div>
       <div class="panelContainerThird">
