--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         </div>
         <hd></hd>
         <h1>Что ещё?</h1>
-        <h2>У меня есть блог, в котором ты можешь увидеть мой прогресс и историю</h2>
-        <button onclick="window.location.href = 'css.html'">Блог</button>
+        <h2>У меня есть портфолио, в котором ты можешь ознакомиться с моими работами.</h2>
+        <button onclick="window.location.href = 'aboutme.html'">Портфолио</button>
     </div>
 </body>
 </html>
