--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,8 @@
         <a class="panelWorks" href="works.html">My works</a>
     </header>
     <div>
-        <span class="text">Я люблю пенисы</span>
+        <span class="title">*текст*</span>
+        <span class="text">Я никита</span>
     </div>
 </body>
 </html>
