--- a/aboutme.html
+++ b/aboutme.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/aboutme.css">
-    <title>About me</title>
-</head>
-<body>
-    <header>
-        <h1 class="titleMe">About me<h1>
-        <a class="panelHome" href="/">Home</a>
-        <a class="panelWorks" href="works.html">My works</a>
-    </header>
-    <div>
-        <span class="title">*текст*</span>
-        <span class="text">Я никита</span>
-    </div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>About me</title>
+        <link rel="stylesheet" href="css/aboutme.css">
+        <script src="https://kit.fontawesome.com/3dd0ab1e58.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <header>
+            <h1 class="titleMe">About me<h1>
+            <a class="panelHome" href="/">Home</a>
+            <a class="panelWorks" href="works.html">My works</a>
+            <a rel="stylesheet" href="web.telegram.org" class="zalupa"> <i class="fa-solid fa-paper-plane"></i> </a>
+            <a rel="stylesheet" href="discord.com"> <i class="fa-brands fa-discord"></i> </a>
+            <a rel="stylesheet" href="vk.com" class=""> <i class="fa-brands fa-vk"></i> </a> 
+        </header>
+        <div>
+            <span class="title">*текст*</span>
+            <span class="text">Я никита</span>
+        </div>
+    </body>
 </html>
