--- a/aboutme.html
+++ b/aboutme.html
@@ -13,13 +13,25 @@
             <h1 class="titleMe">About me<h1>
             <a class="panelHome" href="/">Home</a>
             <a class="panelWorks" href="works.html">My works</a>
-            <a rel="stylesheet" href="web.telegram.org" class="zalupa"> <i class="fa-solid fa-paper-plane"></i> </a>
-            <a rel="stylesheet" href="discord.com"> <i class="fa-brands fa-discord"></i> </a>
-            <a rel="stylesheet" href="vk.com" class=""> <i class="fa-brands fa-vk"></i> </a> 
+            <a rel="stylesheet" href="https://discord.gg/gJx6F4vg" class="animDs" target="_blank"> <i class="fa-brands fa-discord"></i> </a>
+            <a rel="stylesheet" href="https://vk.com/senpaall" class="animVK" target="_blank"> <i class="fa-brands fa-vk"></i> </a> 
         </header>
         <div>
-            <span class="title">*текст*</span>
-            <span class="text">Я никита</span>
+            <span class="title">Никита Абрамовский</span>
+            <span class="text">Я фронтендер с небольшим опытом, и страстью к кодированию. Если меня</span>
+            <span class="text">попросят сделать то, чего я не умею, то я научусь и сделаю это. Я спокойный</span>
+            <span class="text">и общительный человек, и могу вписаться в любую компанию. У меня маниакальная</span>
+            <span class="text">любовь к программированию и к его изучению. Итак, если у вас задача где надо подумать,</span>
+            <span class="text">вы нашли нужного человека!</span>
+            <!-- <img src="avatar.png" class="imgUser"> -->
         </div>
+        <!-- <div class="skillsbg">
+            <span class="skills">Мои возможности</span>
+            <span class="firstPanel">Фронтенд</span>
+
+        </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <div>
+            <span></span>
+        </div> -->
     </body>
 </html>
