update aboutme and add meta tag

--- a/aboutme.html
+++ b/aboutme.html
@@ -25,13 +25,34 @@
             <span class="text">вы нашли нужного человека!</span>
             <!-- <img src="avatar.png" class="imgUser"> -->
         </div>
-        <!-- <div class="skillsbg">
-            <span class="skills">Мои возможности</span>
-            <span class="firstPanel">Фронтенд</span>
-
+        <div class="skillsbg">
+            <div>
+            <span class="skills">Мои возможности</span> 
+                <div class="panel">
+                    <div class="firstPanel">
+                     <span class="TextPanel">Бэкенд программирование</span>
+                     <span class="textPanel3">*В изучении*</span>
+                    </div>
+                    <div class="secondPanel">
+                     <i class="fa-solid fa-code iconFP"></i>
+                     <span class="textPanel">Фронтенд программирование</span>
+                     <span class="textPanel1">Я создаю код с нуля и элегантно</span>
+                     <span class="textPanel2">воплощаю идеи в жизнь, уделяя</span>
+                     <span class="textPanel2">максимальное внимание вашему</span>
+                     <span class="textPanel2">видению продукта.</span>
+                     <span class="textPanel3">Используемые языки:</span>
+                     <span class="textPanel1">HTML, JavaScript, CSS</span>
+                     <span class="textPanel3">Мои инструменты:</span>
+                     <span class="textPanel1">VSCode</span>
+                     <span class="textPanel1">GitHub</span>
+                     <span class="textPanel1">Figma</span>
+                    </div>
+                </div>
+            </div>
+            
         </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <div>
-            <span></span>
-        </div> -->
+            <span>.</span>
+        </div>
     </body>
 </html>
