--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <title>CSS directory</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Портфолио">
+    <meta name="keywords" content="HTML,CSS,JavaScript,Портфолио">
+    <meta name="author" content="Никита Абрамовский">
 </head>
 <body>
     <header>
