--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,7 @@
         </div>
         <div class="skillsbg">
             <div>
-            <span class="skills">Мои возможности</span> 
+             <span class="skills">Мои возможности</span> 
                 <div class="panel">
                     <div class="firstPanel">
                      <span class="TextPanel">Бэкенд программирование</span>
@@ -50,7 +50,7 @@
                 </div>
             </div>
             
-        </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <div>
             <span>.</span>
         </div>
