--- a/aboutme.html
+++ b/aboutme.html
@@ -18,8 +18,8 @@
         </header>
         <div>
             <span class="title">Никита Абрамовский</span>
-            <span class="text">Я фронтендер с небольшим опытом, и страстью к кодированию. Если меня</span>
-            <span class="text">попросят сделать то, чего я не умею, то я научусь и сделаю это. Я спокойный</span>
+            <span class="text">Я фронтендер с небольшим опытом, и страстью к кодированию. Если меня <br>
+                               попросят сделать то, чего я не умею, то я научусь и сделаю это. Я спокойный</span>
             <span class="text">и общительный человек, и могу вписаться в любую компанию. У меня маниакальная</span>
             <span class="text">любовь к программированию и к его изучению. Итак, если у вас задача где надо подумать,</span>
             <span class="text">вы нашли нужного человека!</span>
@@ -49,7 +49,7 @@
                     </div>
                 </div>
             </div>
-        </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <div>
             <span>.</span>
         </div>
