--- a/works.html
+++ b/works.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="css/works.css">
 </head>
 <body>
+    <header>
     <div>
+        <span>My works</span>
         <a href="/">Home</a> <br> <br>
+    </div>
+    </header>
+    <div>
         <a href="css.html">Blog</a>
     </div>
 </body>
