--- a/aboutme.html
+++ b/aboutme.html
@@ -18,12 +18,11 @@
         </header>
         <div>
             <span class="title">Никита Абрамовский</span>
-            <span class="text">Я фронтендер с небольшим опытом, и страстью к кодированию. Если меня <br>
-                               попросят сделать то, чего я не умею, то я научусь и сделаю это. Я спокойный</span>
-            <span class="text">и общительный человек, и могу вписаться в любую компанию. У меня маниакальная</span>
-            <span class="text">любовь к программированию и к его изучению. Итак, если у вас задача где надо подумать,</span>
-            <span class="text">вы нашли нужного человека!</span>
-            <!-- <img src="avatar.png" class="imgUser"> -->
+            <div class="text">Я фронтендер с небольшим опытом, и страстью к кодированию. Если меня <br>
+                               попросят сделать то, чего я не умею, то я научусь и сделаю это. Я спокойный <br>
+                               и общительный человек, и могу вписаться в любую компанию. У меня маниакальная <br>
+                               любовь к программированию и к его изучению. Итак, если у вас задача где надо подумать, <br>
+                               вы нашли нужного человека!</div>
         </div>
         <div class="skillsbg">
             <div>
@@ -35,11 +34,11 @@
                     </div>
                     <div class="secondPanel">
                      <i class="fa-solid fa-code iconFP"></i>
-                     <span class="textPanel">Фронтенд программирование</span>
-                     <span class="textPanel1">Я создаю код с нуля и элегантно</span>
-                     <span class="textPanel2">воплощаю идеи в жизнь, уделяя</span>
-                     <span class="textPanel2">максимальное внимание вашему</span>
-                     <span class="textPanel2">видению продукта.</span>
+                     <b>Фронтенд программирование</b>
+                     <div class="textPanel1">Я создаю код с нуля и элегантно <br> 
+                                              воплощаю идеи в жизнь, уделяя <br> 
+                                              максимальное внимание вашему <br> 
+                                              видению продукта.</div>
                      <span class="textPanel3">Используемые языки:</span>
                      <span class="textPanel1">HTML, JavaScript, CSS</span>
                      <span class="textPanel3">Мои инструменты:</span>
