--- a/works.html
+++ b/works.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My works</title>
-    <link rel="stylesheet" href="css/works.css">
-</head>
-<body>
-    <header>
-    <div>
-        <span>My works</span>
-        <a href="/">Home</a> <br> <br>
+    <link rel="stylesheet" href="css/works.css" />
+  </head>
+  <body>
+    <div class="panel">
+      <span class="titleMe">My works</span>
+      <a href="/" class="home">Home</a>
     </div>
-    </header>
-    <div>
-        <a href="css.html">Blog</a>
+    <div class="content">
+      <div class="text-center headline">Мои работы</div>
+      <div class="site">
+        <div class="site__img">
+          <img src="img/Blog.jpg" />
+        </div>
+        <div class="site__text">
+          <div class="site__headline">Блог</div>
+          <p>
+            Веб-сайт блог на ПК. Прост в использовании, присутствуют настройки фона.
+            Есть ссылки на книги для языков программирования.
+          </p>
+          <a href="css.html">Посетить сайт</a>
+        </div>
+      </div>
+      <div class="site">
+
+      </div>
     </div>
-</body>
+  </body>
 </html>
