--- a/aboutme.html
+++ b/aboutme.html
@@ -34,7 +34,7 @@
                     </div>
                     <div class="secondPanel">
                      <i class="fa-solid fa-code iconFP"></i>
-                     <b>Фронтенд программирование</b>
+                     <b class="textPanel">Фронтенд программирование</b>
                      <div class="textPanel1">Я создаю код с нуля и элегантно <br> 
                                               воплощаю идеи в жизнь, уделяя <br> 
                                               максимальное внимание вашему <br> 
@@ -48,9 +48,14 @@
                     </div>
                 </div>
             </div>
-        </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <div>
-            <span>.</span>
+        </div>
+        <div class="center">
+            <div>
+            <span class="small-text top-indent title">
+                С моими работами вы можете ознакомиться, нажав на кнопку ниже!
+            </span>
+            <button onclick="window.location.href = 'works.html'">Мои работы</button>
+            </div>
         </div>
     </body>
 </html>
