--- a/works.html
+++ b/works.html
@@ -11,6 +11,7 @@
     <div class="panel">
       <span class="titleMe">My works</span>
       <a href="/" class="home">Home</a>
+      <a href="aboutme.html" class="aboutme">About me</a>
     </div>
     <div class="content">
       <div class="text-center headline">Мои работы</div>
