--- a/aboutme.html
+++ b/aboutme.html
@@ -23,7 +23,10 @@
                                и общительный человек, и могу вписаться в любую компанию. У меня маниакальная <br>
                                любовь к программированию и к его изучению. Итак, если у вас задача где надо подумать, <br>
                                вы нашли нужного человека!</div>
-        </div>
+            <div class="center">
+                <hd class="top-indent"></hd>
+            </div>
+            </div>
         <div class="skillsbg">
             <div>
              <span class="skills">Мои возможности</span> 
@@ -51,7 +54,8 @@
         </div>
         <div class="center">
             <div>
-            <span class="small-text top-indent title">
+            <hd class="big-top-indent"></hd>
+            <span class="small-text top-indent-text title line">
                 С моими работами вы можете ознакомиться, нажав на кнопку ниже!
             </span>
             <button onclick="window.location.href = 'works.html'">Мои работы</button>
