--- a/works.html
+++ b/works.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My works</title>
-    <link rel="stylesheet" href="css/works.css" />
+    <link rel="stylesheet" href="css/works.css">
+    <script src="https://kit.fontawesome.com/3dd0ab1e58.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="panel">
       <span class="titleMe">My works</span>
       <a href="/" class="home">Home</a>
       <a href="aboutme.html" class="aboutme">About me</a>
+      <a rel="stylesheet" href="https://discord.gg/gJx6F4vg" class="animDs" target="_blank"> <i class="fa-brands fa-discord"></i> </a>
+      <a rel="stylesheet" href="https://vk.com/senpaall" class="animVK" target="_blank"> <i class="fa-brands fa-vk"></i> </a> 
     </div>
     <div class="content">
       <div class="text-center headline">Мои работы</div>
@@ -29,7 +32,6 @@
         </div>
       </div>
       <div class="site">
-
       </div>
     </div>
   </body>
