fix text and styles

--- a/aboutme.html
+++ b/aboutme.html
@@ -16,12 +16,12 @@
             <a rel="stylesheet" href="https://discord.gg/gJx6F4vg" class="animDs" target="_blank"> <i class="fa-brands fa-discord"></i> </a>
             <a rel="stylesheet" href="https://vk.com/senpaall" class="animVK" target="_blank"> <i class="fa-brands fa-vk"></i> </a> 
         </header>
-        <div>
-            <span class="title">Никита Абрамовский</span>
-            <div class="text">Я фронтендер с небольшим опытом, и страстью к кодированию. Если меня <br>
+        <div class="senpaal">
+            <span class="title">Никита</span>
+            <div class="text">Я <a href="https://vk.com/senpaall" target="_blank">senpaal</a>, фронтендер с небольшим опытом, и страстью к кодированию.<br> Если меня 
                                попросят сделать то, чего я не умею, то я научусь и сделаю это. Я спокойный <br>
-                               и общительный человек, и могу вписаться в любую компанию. У меня маниакальная <br>
-                               любовь к программированию и к его изучению. Итак, если у вас задача где надо подумать, <br>
+                               и общительный человек, и могу вписаться в любую компанию. У меня маниакальная любовь<br>
+                               к программированию и к его изучению. Итак, если у вас задача где надо подумать, <br>
                                вы нашли нужного человека!</div>
             <div class="center">
                 <hd class="top-indent"></hd>
