add contacts and fix links

--- a/works.html
+++ b/works.html
@@ -13,7 +13,7 @@
       <span class="titleMe">My works</span>
       <a href="/" class="home">Home</a>
       <a href="aboutme.html" class="aboutme">About me</a>
-      <a rel="stylesheet" href="https://discord.gg/gJx6F4vg" class="animDs" target="_blank"> <i class="fa-brands fa-discord"></i> </a>
+      <a rel="stylesheet" href="contacts.html" class="animDs" target="_blank"> <i class="fa-brands fa-discord"></i> </a>
       <a rel="stylesheet" href="https://vk.com/senpaall" class="animVK" target="_blank"> <i class="fa-brands fa-vk"></i> </a> 
     </div>
     <div class="content">
