--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
             <h1 class="titleMe">About me<h1>
             <a class="panelHome" href="/">Home</a>
             <a class="panelWorks" href="works.html">My works</a>
-            <a rel="stylesheet" href="https://discord.gg/gJx6F4vg" class="animDs" target="_blank"> <i class="fa-brands fa-discord"></i> </a>
+            <a rel="stylesheet" href="contacts.html" class="animDs" target="_blank"> <i class="fa-brands fa-discord"></i> </a>
             <a rel="stylesheet" href="https://vk.com/senpaall" class="animVK" target="_blank"> <i class="fa-brands fa-vk"></i> </a> 
         </header>
         <div class="senpaal">
