--- a/contacts.html
+++ b/contacts.html
@@ -9,6 +9,9 @@
     <script src="https://kit.fontawesome.com/3dd0ab1e58.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="panel">
+        <span>Contact with me</span>
+    </div>
     <div>
         <div class="idk">
             <div class="block">
